argocd/ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-6s0o7
  namespace: preview-echo-app-template
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-passthrough: 'false'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - echo-app-template-pr-25.previews.k8s.kurtmadel.com
      secretName: preview-tls
  rules:
    - host: echo-app-template-pr-25.previews.k8s.kurtmadel.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-app-template-pr-25
                port:
                  name: http
